--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ defusedxml==0.7.1
 diff-match-patch==20200713
 dj-database-url==0.5.0
 Django==3.2.1
+django-datatables-view==1.19.1
 django-extensions==3.1.3
 django-heroku==0.3.1
 django-import-export==2.5.0
